--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://yashkappa.github.io/attendance-management-system/",
   "name": "attendance-management-system",
   "version": "0.1.0",
   "private": true,
