--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -12,4 +17,5 @@
     "bcrypt": "^6.0.0",
     "body-parser": "^1.20.2"
   }
+  
 }
